<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/list_item_preference_category"
        android:title="@string/pref_category_bluetooth">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_bluetooth_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_enabled_summary"
            android:title="@string/pref_bluetooth_enabled_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_bluetooth_onlyconnected"
            android:dependency="pref_key_bluetooth_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_onlyconnected_summary"
            android:title="@string/pref_bluetooth_onlyconnected_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:dependency="pref_key_bluetooth_enabled"
            android:defaultValue="true"
            android:key="pref_key_bluetooth_delete"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_delete_summary"
            android:title="@string/pref_bluetooth_delete_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="pref_key_bluetooth_enabled"
            android:key="pref_key_bluetooth_markasread"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_markasread_summary"
            android:title="@string/pref_bluetooth_markasread_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:dependency="pref_key_bluetooth_enabled"
            android:defaultValue="false"
            android:key="pref_key_bluetooth_showname"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_showname_summary"
            android:title="@string/pref_bluetooth_showname_title"
            android:widgetLayout="@layout/view_switch" />

        <CheckBoxPreference
            android:dependency="pref_key_bluetooth_enabled"
            android:defaultValue="false"
            android:key="pref_key_bluetooth_maxvol"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_maxvol_summary"
            android:title="@string/pref_bluetooth_maxvol_title"
            android:widgetLayout="@layout/view_switch" />

        <Preference
            android:key="pref_key_bluetooth_apps"
            android:dependency="pref_key_bluetooth_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_bluetooth_apps_summary"
            android:title="@string/pref_bluetooth_apps_title" />

        <Preference
            android:key="pref_key_enablenotification"
            android:dependency="pref_key_bluetooth_enabled"
            android:layout="@layout/list_item_preference"
            android:summary="@string/pref_enablenotification_summary"
            android:title="@string/pref_enablenotification_title" />

    </PreferenceCategory>

</PreferenceScreen>
